--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.generate-ddl=true
 path.to.avatars.folder=/avatars
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
+logging.level.liquibase=DEBUG
