--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,24 @@
 spring.application.name=school
 
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 path.to.avatars.folder=/avatars
+
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
 logging.level.liquibase=DEBUG
+
+
+server.port=8080
+
+
+logging.level.root=info
+logging.level.ru.hogwarts.school=debug
+
+spring.profiles.active=dev
+
